[package]
name = "cipherrun"
version = "0.2.1"
edition = "2024"
authors = ["Marc Rivero <@seifreed>"]
description = "A fast, modular, and scalable TLS/SSL security scanner written in Rust"
license = "GPL-3.0"
repository = "https://github.com/seifreed/cipherrun"
homepage = "https://github.com/seifreed/cipherrun"
documentation = "https://docs.rs/cipherrun"
readme = "README.md"
keywords = ["security", "tls", "ssl", "scanner", "cryptography"]
categories = ["command-line-utilities", "cryptography", "network-programming"]
exclude = [
    "tests/*",
    "testssl.sh/*",
    "sslscan/*",
    "/targets.txt",
    "*.pcap",
    ".git*",
    "Dockerfile",
    "docker-compose.yml",
    "Makefile",
    "/tmp/*",
]

include = [
    "src/**/*",
    "data/**/*.json",
    "data/**/*.yaml",
    "data/**/*.yml",
    "data/**/*.txt",
    "data/**/*.pem",
    "data/**/*.css",
    "migrations/**/*.sql",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

# TLS implementations
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1.10"
tokio-rustls = "0.26"
webpki-roots = "0.26"
openssl = { version = "0.10", features = ["vendored"] }
native-tls = "0.2"

# Networking
socket2 = "0.5"
hickory-resolver = "0.24"
ipnetwork = "0.20"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
hyper = { version = "1.5", features = ["full"] }

# Cryptography
ring = "0.17"
x509-parser = "0.16"
der-parser = "9.0"
pem = "3.0"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# API Server (Axum)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-full", "trace"] }
utoipa = { version = "5.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"
dashmap = "6.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
indicatif = "0.17"
console = "0.15"

# Terminal output
colored = "2.1"
prettytable-rs = "0.10"
termcolor = "1.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
lazy_static = "1.5"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
nom = "7.1"
bytes = "1.8"
url = "2.5"
urlencoding = "2.1"
rand = "0.8"
x25519-dalek = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Template engine for HTML output
handlebars = "6.1"

# File handling
walkdir = "2.5"
tempfile = "3.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "json", "migrate"] }
toml = "0.8"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Async utilities
futures = "0.3"

# Certificate Transparency
bloomfilter = "1.0"

[dev-dependencies]
criterion = "0.5"
mockito = "1.5"
proptest = "1.5"

# Kani formal verification
# Configuration for running `cargo kani` proofs
[package.metadata.kani]
# Enable unstable features for better verification
unstable = ["concrete-playback"]

[[bin]]
name = "cipherrun"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
